[gd_scene load_steps=30 format=3 uid="uid://by2qyvemev4se"]

[ext_resource type="Texture2D" uid="uid://cmmtk76lng52j" path="res://art/characters/Enemy/Characters/Gobuss.png" id="1_eafc6"]
[ext_resource type="Script" path="res://scripts/TurnBased/tb_enemy.gd" id="1_r8u4j"]
[ext_resource type="Texture2D" uid="uid://chewicsrv2m66" path="res://art/UI/PlayerElements/LifeBarMiniUnder.png" id="2_4iabe"]
[ext_resource type="Texture2D" uid="uid://qsdtsxe6cs0a" path="res://art/UI/PlayerElements/LifeBarMiniProgress.png" id="3_tqku4"]
[ext_resource type="Texture2D" uid="uid://bwvlmucnuk0y5" path="res://art/TBCharacters/enemy_turn_sprite.png" id="5_3yxvq"]
[ext_resource type="Texture2D" uid="uid://dt2jv6xmnha6c" path="res://art/TBCharacters/enemy_sprite_dead.png" id="6_1ddun"]
[ext_resource type="Script" path="res://scripts/TurnBased/Enemy/TBEnemyShieldBar.gd" id="6_wx12e"]
[ext_resource type="Texture2D" uid="uid://cs0avpvw1gugn" path="res://art/UI/PlayerElements/stagger_bar_under.png" id="7_67fok"]
[ext_resource type="Texture2D" uid="uid://d0o7lnfwotui0" path="res://art/UI/PlayerElements/shiled_bar_progress.png" id="7_qgkds"]
[ext_resource type="Texture2D" uid="uid://dqbqtbxlfae1i" path="res://art/UI/PlayerElements/stagger_bar_progress.png" id="8_nj82c"]
[ext_resource type="Texture2D" uid="uid://bapikvl8phl44" path="res://art/UI/PlayerElements/water-drop.png" id="11_tdrsx"]
[ext_resource type="Texture2D" uid="uid://lqqtfcs2184e" path="res://art/UI/PlayerElements/lightning_symbol.png" id="12_y74ia"]
[ext_resource type="Texture2D" uid="uid://rxtvbxbdapk3" path="res://art/UI/PlayerElements/flame_symbol.png" id="13_cmlqj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gchnl"]
atlas = ExtResource("1_eafc6")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_td0pf"]
atlas = ExtResource("1_eafc6")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_45y4t"]
atlas = ExtResource("1_eafc6")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fmia"]
atlas = ExtResource("1_eafc6")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_43qwa"]
atlas = ExtResource("1_eafc6")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc1jh"]
atlas = ExtResource("1_eafc6")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_behgv"]
atlas = ExtResource("1_eafc6")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc7ac"]
atlas = ExtResource("1_eafc6")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5o2a"]
atlas = ExtResource("1_eafc6")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_trj2j"]
atlas = ExtResource("1_eafc6")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1hfi"]
atlas = ExtResource("1_eafc6")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwar6"]
atlas = ExtResource("1_eafc6")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahgpo"]
atlas = ExtResource("1_eafc6")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxkoy"]
atlas = ExtResource("1_eafc6")
region = Rect2(192, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lvimw"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gchnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td0pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45y4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fmia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43qwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc1jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_behgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc7ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5o2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trj2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1hfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwar6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahgpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxkoy")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fk51n"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="TBEnemy" type="Node2D" groups=["enemy"]]
script = ExtResource("1_r8u4j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lvimw")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.971111

[node name="TBEnemyHealthBar" type="TextureProgressBar" parent="."]
offset_left = -9.0
offset_top = -12.0
offset_right = 9.0
offset_bottom = -8.0
max_value = 1000.0
texture_under = ExtResource("2_4iabe")
texture_progress = ExtResource("3_tqku4")

[node name="TBEnemyShieldBar" type="TextureProgressBar" parent="."]
offset_left = -9.0
offset_top = -12.0
offset_right = 9.0
offset_bottom = -8.0
texture_progress = ExtResource("7_qgkds")
script = ExtResource("6_wx12e")

[node name="TBEnemyStaggerBar" type="TextureProgressBar" parent="."]
offset_left = -9.0
offset_top = -7.0
offset_right = 9.0
offset_bottom = -5.0
texture_under = ExtResource("7_67fok")
texture_progress = ExtResource("8_nj82c")

[node name="TurnSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_3yxvq")

[node name="DeadSprite" type="Sprite2D" parent="."]
visible = false
rotation = 1.1188
texture = ExtResource("6_1ddun")

[node name="Panel" type="Panel" parent="."]
offset_left = -19.0
offset_top = -19.0
offset_right = 9.0
offset_bottom = -13.0
scale = Vector2(1.34685, 1.34685)
theme_override_styles/panel = SubResource("StyleBoxFlat_fk51n")

[node name="Water" type="Sprite2D" parent="Panel"]
visible = false
position = Vector2(8, 2)
scale = Vector2(0.171488, 0.171488)
texture = ExtResource("11_tdrsx")

[node name="Electric" type="Sprite2D" parent="Panel"]
visible = false
position = Vector2(14, 2)
scale = Vector2(0.0110275, 0.0110275)
texture = ExtResource("12_y74ia")

[node name="Fire" type="Sprite2D" parent="Panel"]
visible = false
position = Vector2(20, 2)
scale = Vector2(0.05594, 0.05594)
texture = ExtResource("13_cmlqj")
